--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </nav>
   </div>
 
-  <div class="container-fluid ">
+  <div class="container">
     <div class="row">
      
           <div class="col-md-6 col-sm-12 col-lg-3">
